--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 ::-webkit-scrollbar {
   width: 3px;
   height: 8px;
@@ -28,7 +28,7 @@
   outline: none;
   text-decoration: none;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+  font-family: "Geist", sans-serif;
   font-optical-sizing: auto;
   color: #27272A;
   letter-spacing: -0.5px;
@@ -39,7 +39,7 @@ a {
 }
 
 .container {
-  max-width: 1720px;
+  max-width: 1720px !important;
   margin: 0 auto;
 }
 @media (max-width: 1752px) {
