--- a/css/style.scss
+++ b/css/style.scss
@@ -49,7 +49,7 @@ a {
   }
 }
 
-//
+// 1rem = 16px | 1rem = 15px
 //@media (max-width: 1024px) {
 //  html {
 //    font-size: 15px;
@@ -67,6 +67,9 @@ a {
 //    font-size: 13px;
 //  }
 //}
+
+
+
 
 @tailwind base;
 @tailwind components;
