--- a/css/output.css
+++ b/css/output.css
@@ -63,6 +63,15 @@ a {
   }
 }
 
+.swiperProductItems .swiper-pagination-bullet {
+  transition: 0.3s;
+}
+
+.swiperProductItems .swiper-pagination-bullet-active {
+  width: 20px;
+  border-radius: 10px;
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -675,6 +684,10 @@ video {
   align-items: center;
 }
 
+.static{
+  position: static;
+}
+
 .absolute{
   position: absolute;
 }
@@ -683,12 +696,36 @@ video {
   position: relative;
 }
 
+.\!bottom-6{
+  bottom: 1.5rem !important;
+}
+
+.left-0{
+  left: 0px;
+}
+
 .right-0{
   right: 0px;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
 .top-0{
   top: 0px;
+}
+
+.top-2{
+  top: 0.5rem;
+}
+
+.left-2{
+  left: 0.5rem;
+}
+
+.z-\[100000\]{
+  z-index: 100000;
 }
 
 .mx-8{
@@ -696,8 +733,57 @@ video {
   margin-right: 2rem;
 }
 
+.mx-1{
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mb-\[100px\]{
+  margin-bottom: 100px;
+}
+
+.ml-\[-35px\]{
+  margin-left: -35px;
+}
+
+.mr-\[-35px\]{
+  margin-right: -35px;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-9{
+  margin-top: 2.25rem;
+}
+
 .mt-\[-4px\]{
   margin-top: -4px;
+}
+
+.mt-\[70px\]{
+  margin-top: 70px;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.ml-3{
+  margin-left: 0.75rem;
 }
 
 .flex{
@@ -716,20 +802,60 @@ video {
   height: 27px;
 }
 
+.h-\[32px\]{
+  height: 32px;
+}
+
+.h-\[427px\]{
+  height: 427px;
+}
+
+.h-\[42px\]{
+  height: 42px;
+}
+
+.h-\[45px\]{
+  height: 45px;
+}
+
 .h-\[50px\]{
   height: 50px;
+}
+
+.h-\[54px\]{
+  height: 54px;
 }
 
 .h-\[570px\]{
   height: 570px;
 }
 
+.h-\[60px\]{
+  height: 60px;
+}
+
 .h-\[67px\]{
   height: 67px;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .h-full{
   height: 100%;
+}
+
+.h-1{
+  height: 0.25rem;
+}
+
+.h-\[4px\]{
+  height: 4px;
+}
+
+.h-\[72px\]{
+  height: 72px;
 }
 
 .w-10{
@@ -748,12 +874,28 @@ video {
   width: 40%;
 }
 
+.w-\[40px\]{
+  width: 40px;
+}
+
+.w-\[42px\]{
+  width: 42px;
+}
+
+.w-\[45px\]{
+  width: 45px;
+}
+
 .w-\[486px\]{
   width: 486px;
 }
 
 .w-\[60\%\]{
   width: 60%;
+}
+
+.w-\[60px\]{
+  width: 60px;
 }
 
 .w-\[80px\]{
@@ -764,12 +906,40 @@ video {
   width: 100%;
 }
 
+.w-1{
+  width: 0.25rem;
+}
+
+.w-\[4px\]{
+  width: 4px;
+}
+
 .min-w-\[1px\]{
   min-width: 1px;
 }
 
+.min-w-1{
+  min-width: 0.25rem;
+}
+
+.min-w-\[4px\]{
+  min-width: 4px;
+}
+
 .max-w-\[273px\]{
   max-width: 273px;
+}
+
+.max-w-\[490px\]{
+  max-width: 490px;
+}
+
+.max-w-\[677px\]{
+  max-width: 677px;
+}
+
+.max-w-\[4px\]{
+  max-width: 4px;
 }
 
 .cursor-pointer{
@@ -808,6 +978,14 @@ video {
   gap: 2rem;
 }
 
+.gap-1{
+  gap: 0.25rem;
+}
+
+.gap-\[5px\]{
+  gap: 5px;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -820,6 +998,10 @@ video {
   border-radius: 24px;
 }
 
+.rounded-\[4px\]{
+  border-radius: 4px;
+}
+
 .rounded-\[6px\]{
   border-radius: 6px;
 }
@@ -830,6 +1012,14 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-\[\#6E6E6E\]\/25{
+  border-color: rgb(110 110 110 / 0.25);
 }
 
 .bg-\[\#323232\]{
@@ -852,6 +1042,14 @@ video {
   background-color: rgb(244 244 244 / var(--tw-bg-opacity, 1));
 }
 
+.bg-black\/10{
+  background-color: rgb(50 50 50 / 0.1);
+}
+
+.bg-black\/50{
+  background-color: rgb(50 50 50 / 0.5);
+}
+
 .bg-blue{
   --tw-bg-opacity: 1;
   background-color: rgb(0 159 255 / var(--tw-bg-opacity, 1));
@@ -866,8 +1064,45 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-white\/50{
+  background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-\[\#6E6E6E\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 110 110 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#16B34B\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 179 75 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FB2FBE\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 47 190 / var(--tw-bg-opacity, 1));
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .p-\[2px\]{
   padding: 2px;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-1{
+  padding: 0.25rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6{
@@ -880,9 +1115,44 @@ video {
   padding-right: 2rem;
 }
 
+.px-\[95px\]{
+  padding-left: 95px;
+  padding-right: 95px;
+}
+
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-\[6px\]{
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+.py-\[1\]{
+  padding-top: 1;
+  padding-bottom: 1;
+}
+
+.px-\[4px\]{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.py-\[6px\]{
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.py-\[4px\]{
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .pl-3{
@@ -901,12 +1171,65 @@ video {
   font-size: 20px;
 }
 
+.text-\[28px\]{
+  font-size: 28px;
+}
+
+.text-\[32px\]{
+  font-size: 32px;
+}
+
+.text-\[85px\]{
+  font-size: 85px;
+}
+
+.text-\[14px\]{
+  font-size: 14px;
+}
+
+.text-\[24px\]{
+  font-size: 24px;
+}
+
+.text-\[13px\]{
+  font-size: 13px;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
 .font-medium{
   font-weight: 500;
+}
+
+.font-semibold{
+  font-weight: 600;
+}
+
+.leading-\[75px\]{
+  line-height: 75px;
+}
+
+.leading-\[24px\]{
+  line-height: 24px;
+}
+
+.tracking-\[-0\.16px\]{
+  letter-spacing: -0.16px;
+}
+
+.tracking-\[-1\.7px\]{
+  letter-spacing: -1.7px;
+}
+
+.tracking-\[-0\.18px\]{
+  letter-spacing: -0.18px;
+}
+
+.text-\[\#747474\]{
+  --tw-text-opacity: 1;
+  color: rgb(116 116 116 / var(--tw-text-opacity, 1));
 }
 
 .text-black{
@@ -924,8 +1247,47 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#6E6E6E\]{
+  --tw-text-opacity: 1;
+  color: rgb(110 110 110 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#212121\]{
+  --tw-text-opacity: 1;
+  color: rgb(33 33 33 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#323232\]{
+  --tw-text-opacity: 1;
+  color: rgb(50 50 50 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#707070\]{
+  --tw-text-opacity: 1;
+  color: rgb(112 112 112 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#CF301B\]{
+  --tw-text-opacity: 1;
+  color: rgb(207 48 27 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\[\#CF301B\]\]{
+  color: [#CF301B];
+}
+
 .underline{
   text-decoration-line: underline;
+}
+
+.line-through{
+  text-decoration-line: line-through;
+}
+
+.backdrop-blur-\[7\.5px\]{
+  --tw-backdrop-blur: blur(7.5px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition{
@@ -944,8 +1306,42 @@ video {
   color: rgb(50 50 50 / 0.8);
 }
 
+.after\:text-\[20px\]::after{
+  content: var(--tw-content);
+  font-size: 20px;
+}
+
+.after\:text-black::after{
+  content: var(--tw-content);
+  --tw-text-opacity: 1;
+  color: rgb(50 50 50 / var(--tw-text-opacity, 1));
+}
+
+.after\:content-\[\'next\'\]::after{
+  --tw-content: 'next';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'prev\'\]::after{
+  --tw-content: 'prev';
+  content: var(--tw-content);
+}
+
+.hover\:border-black:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(50 50 50 / var(--tw-border-opacity, 1));
+}
+
+.hover\:bg-\[\#CF301B\]\/90:hover{
+  background-color: rgb(207 48 27 / 0.9);
+}
+
 .hover\:bg-blue\/80:hover{
   background-color: rgb(0 159 255 / 0.8);
+}
+
+.hover\:bg-white\/80:hover{
+  background-color: rgb(255 255 255 / 0.8);
 }
 
 /*# sourceMappingURL=output.css.map */
