--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,14 @@ a {
   }
 }
 
+.swiperProductItems .swiper-pagination-bullet {
+  transition: 0.3s;
+}
+.swiperProductItems .swiper-pagination-bullet-active {
+  width: 20px;
+  border-radius: 10px;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
