--- a/css/output.css
+++ b/css/output.css
@@ -65,6 +65,15 @@ a {
   }
 }
 
+.swiperProductItems .swiper-pagination-bullet {
+  transition: 0.3s;
+}
+
+.swiperProductItems .swiper-pagination-bullet-active {
+  width: 20px;
+  border-radius: 10px;
+}
+
 .swiper-pagination {
   display: none;
 }
@@ -740,6 +749,14 @@ video {
   top: 0.5rem;
 }
 
+.top-\[0\]{
+  top: 0;
+}
+
+.right-\[140px\]{
+  right: 140px;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -830,6 +847,10 @@ video {
   margin-top: 70px;
 }
 
+.mb-\[20\]{
+  margin-bottom: 20;
+}
+
 .block{
   display: block;
 }
@@ -918,6 +939,10 @@ video {
   height: 100%;
 }
 
+.min-h-\[420px\]{
+  min-height: 420px;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -1004,6 +1029,22 @@ video {
 
 .max-w-\[752px\]{
   max-width: 752px;
+}
+
+.max-w-\[770px\]{
+  max-width: 770px;
+}
+
+.max-w-\[750px\]{
+  max-width: 750px;
+}
+
+.max-w-\[700px\]{
+  max-width: 700px;
+}
+
+.max-w-\[650px\]{
+  max-width: 650px;
 }
 
 .transform{
@@ -1216,12 +1257,21 @@ video {
   padding-bottom: 4px;
 }
 
+.py-\[50px\]{
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 .pl-3{
   padding-left: 0.75rem;
 }
 
 .pl-\[40px\]{
   padding-left: 40px;
+}
+
+.pl-\[50px\]{
+  padding-left: 50px;
 }
 
 .text-center{
@@ -1377,6 +1427,10 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#\]{
+  color: #;
 }
 
 .underline{
