--- a/css/output.css
+++ b/css/output.css
@@ -683,6 +683,12 @@ video {
   align-items: center;
 }
 
+.flex-jsb-s{
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+}
+
 .flex-js-c{
   display: flex;
   justify-content: flex-start;
@@ -693,6 +699,12 @@ video {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.flex-jc-s{
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
 
 .flex-je-c{
@@ -753,6 +765,10 @@ video {
   top: 0.5rem;
 }
 
+.left-\[0\]{
+  left: 0;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -767,6 +783,10 @@ video {
 
 .z-\[100000\]{
   z-index: 100000;
+}
+
+.m-auto{
+  margin: auto;
 }
 
 .mx-1{
@@ -839,8 +859,20 @@ video {
   margin-top: 20px;
 }
 
+.mt-\[6px\]{
+  margin-top: 6px;
+}
+
 .mt-\[70px\]{
   margin-top: 70px;
+}
+
+.mb-\[40px\]{
+  margin-bottom: 40px;
+}
+
+.mb-\[30px\]{
+  margin-bottom: 30px;
 }
 
 .block{
@@ -855,12 +887,20 @@ video {
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
 .h-10{
   height: 2.5rem;
 }
 
 .h-4{
   height: 1rem;
+}
+
+.h-\[150px\]{
+  height: 150px;
 }
 
 .h-\[240px\]{
@@ -903,6 +943,10 @@ video {
   height: 50px;
 }
 
+.h-\[52px\]{
+  height: 52px;
+}
+
 .h-\[54px\]{
   height: 54px;
 }
@@ -931,12 +975,8 @@ video {
   height: 100%;
 }
 
-.h-\[150px\]{
-  height: 150px;
-}
-
-.h-\[52px\]{
-  height: 52px;
+.h-\[740px\]{
+  height: 740px;
 }
 
 .min-h-\[420px\]{
@@ -1019,6 +1059,10 @@ video {
   max-width: 4px;
 }
 
+.max-w-\[520px\]{
+  max-width: 520px;
+}
+
 .max-w-\[590px\]{
   max-width: 590px;
 }
@@ -1039,12 +1083,28 @@ video {
   max-width: 752px;
 }
 
+.max-w-\[1000px\]{
+  max-width: 1000px;
+}
+
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.list-disc{
+  list-style-type: disc;
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1091,6 +1151,20 @@ video {
   gap: 5px;
 }
 
+.gap-x-\[30px\]{
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+
+.gap-y-\[60px\]{
+  row-gap: 60px;
+}
+
+.gap-x-\[50px\]{
+  -moz-column-gap: 50px;
+       column-gap: 50px;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1107,6 +1181,10 @@ video {
   border-radius: 24px;
 }
 
+.rounded-\[30px\]{
+  border-radius: 30px;
+}
+
 .rounded-\[4px\]{
   border-radius: 4px;
 }
@@ -1121,10 +1199,6 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
-}
-
-.rounded-\[30px\]{
-  border-radius: 30px;
 }
 
 .border{
@@ -1196,6 +1270,23 @@ video {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-\[\#3B4B49\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 75 73 / var(--tw-bg-opacity, 1));
+}
+
+.bg-cover{
+  background-size: cover;
+}
+
+.bg-center{
+  background-position: center;
+}
+
+.bg-no-repeat{
+  background-repeat: no-repeat;
+}
+
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1227,6 +1318,11 @@ video {
   padding-right: 0.25rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1252,6 +1348,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-\[110px\]{
+  padding-top: 110px;
+  padding-bottom: 110px;
+}
+
 .py-\[4px\]{
   padding-top: 4px;
   padding-bottom: 4px;
@@ -1262,14 +1363,9 @@ video {
   padding-bottom: 50px;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-\[70px\]{
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
 .pl-3{
@@ -1282,6 +1378,10 @@ video {
 
 .pl-\[50px\]{
   padding-left: 50px;
+}
+
+.pl-\[20px\]{
+  padding-left: 20px;
 }
 
 .text-center{
@@ -1422,6 +1522,10 @@ video {
 .text-\[\#fff\]{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\]{
+  color: ;
 }
 
 .text-black{
