--- a/css/output.css
+++ b/css/output.css
@@ -1038,6 +1038,11 @@ select{
   margin-right: 2rem;
 }
 
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -1146,6 +1151,18 @@ select{
   margin-top: 70px;
 }
 
+.mt-\[30px\]{
+  margin-top: 30px;
+}
+
+.mb-\[60px\]{
+  margin-bottom: 60px;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -1160,6 +1177,14 @@ select{
 
 .grid{
   display: grid;
+}
+
+.contents{
+  display: contents;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-10{
@@ -1386,6 +1411,18 @@ select{
   max-width: 752px;
 }
 
+.max-w-md{
+  max-width: 28rem;
+}
+
+.max-w-3xl{
+  max-width: 48rem;
+}
+
+.max-w-\[1100px\]{
+  max-width: 1100px;
+}
+
 .translate-y-\[-50\%\]{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1481,6 +1518,12 @@ select{
   row-gap: 60px;
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1525,8 +1568,29 @@ select{
   border-width: 1px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-\[\#009FFF\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
+}
+
 .border-\[\#6E6E6E\]\/25{
   border-color: rgb(110 110 110 / 0.25);
+}
+
+.border-transparent{
+  border-color: transparent;
 }
 
 .bg-\[\#16B34B\]{
@@ -1672,6 +1736,11 @@ select{
   padding-right: 2rem;
 }
 
+.px-\[24px\]{
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 .px-\[6px\]{
   padding-left: 6px;
   padding-right: 6px;
@@ -1692,6 +1761,11 @@ select{
   padding-bottom: 110px;
 }
 
+.py-\[16px\]{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
 .py-\[4px\]{
   padding-top: 4px;
   padding-bottom: 4px;
@@ -1705,6 +1779,16 @@ select{
 .py-\[70px\]{
   padding-top: 70px;
   padding-bottom: 70px;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .pl-3{
@@ -1777,6 +1861,11 @@ select{
 
 .text-\[85px\]{
   font-size: 85px;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold{
@@ -1894,6 +1983,11 @@ select{
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#009FFF\]{
+  --tw-text-opacity: 1;
+  color: rgb(0 159 255 / var(--tw-text-opacity, 1));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1922,6 +2016,18 @@ select{
 
 .transition-all{
   transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.transition-opacity{
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
 }
@@ -1981,14 +2087,25 @@ select{
   background-color: rgb(255 255 255 / 0.8);
 }
 
+.hover\:bg-\[\#009FFF\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 159 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:text-\[\#fff\]:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-\[\#007ACC\]:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 122 204 / var(--tw-text-opacity, 1));
+}
+
 .group:hover .group-hover\:scale-\[1\.05\]{
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.peer:checked ~ .peer-checked\:left-\[22px\]{
-  left: 22px;
 }
 
 .peer:checked ~ .peer-checked\:left-\[20px\]{
