--- a/css/output.css
+++ b/css/output.css
@@ -19,7 +19,7 @@
 /* Track */
 
 ::-webkit-scrollbar-track {
-  background: white;
+  background: #ffff;
 }
 
 /* Handle */
@@ -156,7 +156,7 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-  .swiper-button-prev {
+.swiper-button-prev {
     display: none;
   }
 
@@ -1092,14 +1092,6 @@ select{
   top: 50%;
 }
 
-.left-1\/2{
-  left: 50%;
-}
-
-.top-1\/2{
-  top: 50%;
-}
-
 .z-0{
   z-index: 0;
 }
@@ -1136,6 +1128,14 @@ select{
   margin: auto;
 }
 
+.m-\[4px\]{
+  margin: 4px;
+}
+
+.m-\[auto\]{
+  margin: auto;
+}
+
 .mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -1161,12 +1161,25 @@ select{
   margin-bottom: 10px;
 }
 
+.my-\[4px\]{
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
 .mb-1{
   margin-bottom: 0.25rem;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
 }
 
 .mb-4{
@@ -1187,6 +1200,18 @@ select{
 
 .mb-8{
   margin-bottom: 2rem;
+}
+
+.mb-\[-2px\]{
+  margin-bottom: -2px;
+}
+
+.mb-\[-4px\]{
+  margin-bottom: -4px;
+}
+
+.mb-\[-8px\]{
+  margin-bottom: -8px;
 }
 
 .mb-\[100px\]{
@@ -1245,6 +1270,10 @@ select{
   margin-right: 0.5rem;
 }
 
+.mr-5{
+  margin-right: 1.25rem;
+}
+
 .mr-\[-35px\]{
   margin-right: -35px;
 }
@@ -1277,6 +1306,10 @@ select{
   margin-top: 0.5rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .mt-4{
   margin-top: 1rem;
 }
@@ -1289,8 +1322,16 @@ select{
   margin-top: 1.5rem;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
 .mt-9{
   margin-top: 2.25rem;
+}
+
+.mt-\[-10px\]{
+  margin-top: -10px;
 }
 
 .mt-\[-20px\]{
@@ -1303,6 +1344,10 @@ select{
 
 .mt-\[-60px\]{
   margin-top: -60px;
+}
+
+.mt-\[-90px\]{
+  margin-top: -90px;
 }
 
 .mt-\[12px\]{
@@ -1345,52 +1390,32 @@ select{
   margin-top: 70px;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
+.mr-\[10px\]{
+  margin-right: 10px;
 }
 
-.mr-5{
-  margin-right: 1.25rem;
+.mr-\[30px\]{
+  margin-right: 30px;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mb-\[24px\]{
+  margin-bottom: 24px;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
+.mr-\[80px\]{
+  margin-right: 80px;
 }
 
-.mb-\[-2px\]{
-  margin-bottom: -2px;
+.mr-\[16px\]{
+  margin-right: 16px;
 }
 
-.mt-3{
-  margin-top: 0.75rem;
+.ml-\[24px\]{
+  margin-left: 24px;
 }
 
-.mb-\[-4px\]{
-  margin-bottom: -4px;
-}
-
-.mb-\[-8px\]{
-  margin-bottom: -8px;
-}
-
-.mt-\[-10px\]{
-  margin-top: -10px;
-}
-
-.mt-\[-50px\]{
-  margin-top: -50px;
-}
-
-.mt-\[-80px\]{
-  margin-top: -80px;
-}
-
-.mt-\[-90px\]{
-  margin-top: -90px;
+.mr-\[4px\]{
+  margin-right: 4px;
 }
 
 .block{
@@ -1449,6 +1474,10 @@ select{
   height: 27px;
 }
 
+.h-\[28px\]{
+  height: 28px;
+}
+
 .h-\[320px\]{
   height: 320px;
 }
@@ -1461,12 +1490,20 @@ select{
   height: 330px;
 }
 
+.h-\[36px\]{
+  height: 36px;
+}
+
 .h-\[378px\]{
   height: 378px;
 }
 
 .h-\[405px\]{
   height: 405px;
+}
+
+.h-\[40px\]{
+  height: 40px;
 }
 
 .h-\[427px\]{
@@ -1529,6 +1566,10 @@ select{
   height: 762px;
 }
 
+.h-\[869px\]{
+  height: 869px;
+}
+
 .h-auto{
   height: auto;
 }
@@ -1537,28 +1578,20 @@ select{
   height: 100%;
 }
 
-.h-\[869px\]{
-  height: 869px;
+.h-\[155px\]{
+  height: 155px;
 }
 
-.h-\[28px\]{
-  height: 28px;
-}
-
-.h-\[96px\]{
-  height: 96px;
-}
-
-.h-\[36px\]{
-  height: 36px;
-}
-
-.h-\[40px\]{
-  height: 40px;
+.max-h-\[100\%\]{
+  max-height: 100%;
 }
 
 .min-h-\[420px\]{
   min-height: 420px;
+}
+
+.min-h-\[155px\]{
+  min-height: 155px;
 }
 
 .w-10{
@@ -1583,6 +1616,10 @@ select{
 
 .w-\[1px\]{
   width: 1px;
+}
+
+.w-\[24px\]{
+  width: 24px;
 }
 
 .w-\[300px\]{
@@ -1621,6 +1658,10 @@ select{
   width: 4px;
 }
 
+.w-\[58px\]{
+  width: 58px;
+}
+
 .w-\[60\%\]{
   width: 60%;
 }
@@ -1633,20 +1674,12 @@ select{
   width: 80px;
 }
 
-.w-full{
-  width: 100%;
-}
-
-.w-\[58px\]{
-  width: 58px;
-}
-
 .w-auto{
   width: auto;
 }
 
-.w-\[24px\]{
-  width: 24px;
+.w-full{
+  width: 100%;
 }
 
 .min-w-10{
@@ -1721,6 +1754,18 @@ select{
   max-width: 752px;
 }
 
+.max-w-\[440px\]{
+  max-width: 440px;
+}
+
+.max-w-\[100\%\]{
+  max-width: 100%;
+}
+
+.max-w-\[670px\]{
+  max-width: 670px;
+}
+
 .grow-\[1\]{
   flex-grow: 1;
 }
@@ -1765,6 +1810,14 @@ select{
 
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1825,6 +1878,10 @@ select{
 
 .gap-\[60px\]{
   gap: 60px;
+}
+
+.gap-\[20px\]{
+  gap: 20px;
 }
 
 .gap-x-\[30px\]{
@@ -1895,12 +1952,24 @@ select{
   border-radius: 9999px;
 }
 
+.rounded-\[\#6E6E6E\]{
+  border-radius: #6E6E6E;
+}
+
+.rounded-\[40px\]{
+  border-radius: 40px;
+}
+
 .border{
   border-width: 1px;
 }
 
 .border-2{
   border-width: 2px;
+}
+
+.border-0{
+  border-width: 0px;
 }
 
 .border-b{
@@ -1947,6 +2016,14 @@ select{
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
 }
 
+.border-\[rgba\(110\2c 110\2c 110\2c 0\.25\)\]{
+  border-color: rgba(110,110,110,0.25);
+}
+
+.border-\[none\]{
+  border-color: none;
+}
+
 .bg-\[\#165FFE\]{
   --tw-bg-opacity: 1;
   background-color: rgb(22 95 254 / var(--tw-bg-opacity, 1));
@@ -1980,6 +2057,11 @@ select{
 .bg-\[\#6E6E6E\]{
   --tw-bg-opacity: 1;
   background-color: rgb(110 110 110 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#B1EDD5\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(177 237 213 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#CACACA\]{
@@ -2050,11 +2132,6 @@ select{
 
 .bg-white\/50{
   background-color: rgb(255 255 255 / 0.5);
-}
-
-.bg-\[\#B1EDD5\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(177 237 213 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[linear-gradient\(101deg\2c _\#587AFF_-5\.69\%\2c _\#7144F5_44\.08\%\2c _\#D426FF_111\.99\%\)\]{
@@ -2187,6 +2264,41 @@ select{
   padding-bottom: 70px;
 }
 
+.px-\[32px\]{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.py-\[24px\]{
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.py-\[\]{
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.px-\[px10px\]{
+  padding-left: px10px;
+  padding-right: px10px;
+}
+
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.px-\[10px\]{
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.px-\[16px\]{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 .pb-3{
   padding-bottom: 0.75rem;
 }
@@ -2263,6 +2375,10 @@ select{
   font-size: 40px;
 }
 
+.text-\[42px\]{
+  font-size: 42px;
+}
+
 .text-\[64px\]{
   font-size: 64px;
 }
@@ -2274,10 +2390,6 @@ select{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[42px\]{
-  font-size: 42px;
 }
 
 .font-bold{
@@ -2312,16 +2424,16 @@ select{
   line-height: 24px;
 }
 
+.leading-\[32px\]{
+  line-height: 32px;
+}
+
 .leading-\[75px\]{
   line-height: 75px;
 }
 
 .leading-\[auto\]{
   line-height: auto;
-}
-
-.leading-\[32px\]{
-  line-height: 32px;
 }
 
 .tracking-\[-0\.16px\]{
@@ -2347,6 +2459,11 @@ select{
 .text-\[\#009FFF\]{
   --tw-text-opacity: 1;
   color: rgb(0 159 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#0C6C38\]{
+  --tw-text-opacity: 1;
+  color: rgb(12 108 56 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#212121\]{
@@ -2402,15 +2519,6 @@ select{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-\[\]{
-  color: ;
-}
-
-.text-\[\#0C6C38\]{
-  --tw-text-opacity: 1;
-  color: rgb(12 108 56 / var(--tw-text-opacity, 1));
 }
 
 .underline{
@@ -2532,9 +2640,13 @@ select{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.active\:border-blue:active{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
+.focus\:border-0:focus{
+  border-width: 0px;
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .group:hover .group-hover\:scale-\[1\.05\]{
