--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,12 @@ a {
   opacity: 1 !important;
 }
 
+.bg {
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
