--- a/css/output.css
+++ b/css/output.css
@@ -173,6 +173,12 @@ a {
   opacity: 1 !important;
 }
 
+.bg {
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -1020,6 +1026,10 @@ select{
   bottom: 1.5rem !important;
 }
 
+.bottom-\[-5px\]{
+  bottom: -5px;
+}
+
 .bottom-\[0\]{
   bottom: 0;
 }
@@ -1034,6 +1044,10 @@ select{
 
 .left-2{
   left: 0.5rem;
+}
+
+.left-\[-5px\]{
+  left: -5px;
 }
 
 .left-\[0\]{
@@ -1124,15 +1138,11 @@ select{
   grid-column: span 7 / span 7;
 }
 
-.m-auto{
+.m-\[auto\]{
   margin: auto;
 }
 
-.m-\[4px\]{
-  margin: 4px;
-}
-
-.m-\[auto\]{
+.m-auto{
   margin: auto;
 }
 
@@ -1159,6 +1169,11 @@ select{
 .my-\[10px\]{
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.my-\[30px\]{
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .my-\[4px\]{
@@ -1226,8 +1241,16 @@ select{
   margin-bottom: 15px;
 }
 
+.mb-\[16px\]{
+  margin-bottom: 16px;
+}
+
 .mb-\[20px\]{
   margin-bottom: 20px;
+}
+
+.mb-\[24px\]{
+  margin-bottom: 24px;
 }
 
 .mb-\[25px\]{
@@ -1238,12 +1261,24 @@ select{
   margin-bottom: 30px;
 }
 
+.mb-\[32px\]{
+  margin-bottom: 32px;
+}
+
 .mb-\[40px\]{
   margin-bottom: 40px;
 }
 
+.mb-\[4px\]{
+  margin-bottom: 4px;
+}
+
 .mb-\[60px\]{
   margin-bottom: 60px;
+}
+
+.mb-\[6px\]{
+  margin-bottom: 6px;
 }
 
 .mb-\[70px\]{
@@ -1262,6 +1297,14 @@ select{
   margin-left: -35px;
 }
 
+.ml-\[16px\]{
+  margin-left: 16px;
+}
+
+.ml-\[24px\]{
+  margin-left: 24px;
+}
+
 .mr-1{
   margin-right: 0.25rem;
 }
@@ -1278,16 +1321,36 @@ select{
   margin-right: -35px;
 }
 
+.mr-\[10px\]{
+  margin-right: 10px;
+}
+
 .mr-\[12px\]{
   margin-right: 12px;
+}
+
+.mr-\[16px\]{
+  margin-right: 16px;
+}
+
+.mr-\[30px\]{
+  margin-right: 30px;
 }
 
 .mr-\[45px\]{
   margin-right: 45px;
 }
 
+.mr-\[4px\]{
+  margin-right: 4px;
+}
+
 .mr-\[5px\]{
   margin-right: 5px;
+}
+
+.mr-\[80px\]{
+  margin-right: 80px;
 }
 
 .mr-\[8px\]{
@@ -1350,6 +1413,10 @@ select{
   margin-top: -90px;
 }
 
+.mt-\[100px\]{
+  margin-top: 100px;
+}
+
 .mt-\[12px\]{
   margin-top: 12px;
 }
@@ -1390,34 +1457,6 @@ select{
   margin-top: 70px;
 }
 
-.mr-\[10px\]{
-  margin-right: 10px;
-}
-
-.mr-\[30px\]{
-  margin-right: 30px;
-}
-
-.mb-\[24px\]{
-  margin-bottom: 24px;
-}
-
-.mr-\[80px\]{
-  margin-right: 80px;
-}
-
-.mr-\[16px\]{
-  margin-right: 16px;
-}
-
-.ml-\[24px\]{
-  margin-left: 24px;
-}
-
-.mr-\[4px\]{
-  margin-right: 4px;
-}
-
 .block{
   display: block;
 }
@@ -1428,6 +1467,10 @@ select{
 
 .flex{
   display: flex;
+}
+
+.inline-flex{
+  display: inline-flex;
 }
 
 .table{
@@ -1454,8 +1497,16 @@ select{
   height: 1.5rem;
 }
 
+.h-\[100px\]{
+  height: 100px;
+}
+
 .h-\[150px\]{
   height: 150px;
+}
+
+.h-\[155px\]{
+  height: 155px;
 }
 
 .h-\[18px\]{
@@ -1578,10 +1629,6 @@ select{
   height: 100%;
 }
 
-.h-\[155px\]{
-  height: 155px;
-}
-
 .max-h-\[100\%\]{
   max-height: 100%;
 }
@@ -1590,16 +1637,16 @@ select{
   min-height: 420px;
 }
 
-.min-h-\[155px\]{
-  min-height: 155px;
-}
-
 .w-10{
   width: 2.5rem;
 }
 
 .w-4{
   width: 1rem;
+}
+
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[110px\]{
@@ -1618,6 +1665,10 @@ select{
   width: 1px;
 }
 
+.w-\[20px\]{
+  width: 20px;
+}
+
 .w-\[24px\]{
   width: 24px;
 }
@@ -1628,6 +1679,10 @@ select{
 
 .w-\[320px\]{
   width: 320px;
+}
+
+.w-\[32px\]{
+  width: 32px;
 }
 
 .w-\[350px\]{
@@ -1694,12 +1749,20 @@ select{
   min-width: 1px;
 }
 
+.min-w-\[24px\]{
+  min-width: 24px;
+}
+
 .min-w-\[320px\]{
   min-width: 320px;
 }
 
 .min-w-\[4px\]{
   min-width: 4px;
+}
+
+.max-w-\[100\%\]{
+  max-width: 100%;
 }
 
 .max-w-\[1000px\]{
@@ -1714,12 +1777,24 @@ select{
   max-width: 1300px;
 }
 
+.max-w-\[170px\]{
+  max-width: 170px;
+}
+
+.max-w-\[210px\]{
+  max-width: 210px;
+}
+
 .max-w-\[273px\]{
   max-width: 273px;
 }
 
 .max-w-\[400px\]{
   max-width: 400px;
+}
+
+.max-w-\[440px\]{
+  max-width: 440px;
 }
 
 .max-w-\[490px\]{
@@ -1738,12 +1813,24 @@ select{
   max-width: 590px;
 }
 
+.max-w-\[600px\]{
+  max-width: 600px;
+}
+
 .max-w-\[650px\]{
   max-width: 650px;
 }
 
+.max-w-\[670px\]{
+  max-width: 670px;
+}
+
 .max-w-\[677px\]{
   max-width: 677px;
+}
+
+.max-w-\[680px\]{
+  max-width: 680px;
 }
 
 .max-w-\[700px\]{
@@ -1754,16 +1841,8 @@ select{
   max-width: 752px;
 }
 
-.max-w-\[440px\]{
-  max-width: 440px;
-}
-
-.max-w-\[100\%\]{
-  max-width: 100%;
-}
-
-.max-w-\[670px\]{
-  max-width: 670px;
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .grow-\[1\]{
@@ -1812,12 +1891,12 @@ select{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-7{
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1830,6 +1909,10 @@ select{
 
 .items-center{
   align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
 }
 
 .justify-between{
@@ -1852,6 +1935,10 @@ select{
   gap: 0.5rem;
 }
 
+.gap-2\.5{
+  gap: 0.625rem;
+}
+
 .gap-3{
   gap: 0.75rem;
 }
@@ -1868,6 +1955,10 @@ select{
   gap: 2rem;
 }
 
+.gap-\[20px\]{
+  gap: 20px;
+}
+
 .gap-\[30px\]{
   gap: 30px;
 }
@@ -1878,10 +1969,6 @@ select{
 
 .gap-\[60px\]{
   gap: 60px;
-}
-
-.gap-\[20px\]{
-  gap: 20px;
 }
 
 .gap-x-\[30px\]{
@@ -1896,6 +1983,12 @@ select{
 
 .gap-y-\[60px\]{
   row-gap: 60px;
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
@@ -1916,6 +2009,10 @@ select{
   text-wrap: nowrap;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
 .rounded-\[12px\]{
   border-radius: 12px;
 }
@@ -1932,8 +2029,16 @@ select{
   border-radius: 30px;
 }
 
+.rounded-\[40px\]{
+  border-radius: 40px;
+}
+
 .rounded-\[4px\]{
   border-radius: 4px;
+}
+
+.rounded-\[50\%\]{
+  border-radius: 50%;
 }
 
 .rounded-\[50px\]{
@@ -1952,28 +2057,28 @@ select{
   border-radius: 9999px;
 }
 
-.rounded-\[\#6E6E6E\]{
-  border-radius: #6E6E6E;
-}
-
-.rounded-\[40px\]{
-  border-radius: 40px;
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .border{
   border-width: 1px;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-0{
   border-width: 0px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-b{
   border-bottom-width: 1px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
 }
 
 .border-b-\[1px\]{
@@ -2007,6 +2112,14 @@ select{
   border-color: rgb(199 199 199 / var(--tw-border-opacity, 1));
 }
 
+.border-\[none\]{
+  border-color: none;
+}
+
+.border-\[rgba\(110\2c 110\2c 110\2c 0\.25\)\]{
+  border-color: rgba(110,110,110,0.25);
+}
+
 .border-\[rgba\(33\2c 33\2c 33\2c 0\.2\)\]{
   border-color: rgba(33,33,33,0.2);
 }
@@ -2016,12 +2129,9 @@ select{
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
 }
 
-.border-\[rgba\(110\2c 110\2c 110\2c 0\.25\)\]{
-  border-color: rgba(110,110,110,0.25);
-}
-
-.border-\[none\]{
-  border-color: none;
+.bg-\[\#009FFF\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 159 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#165FFE\]{
@@ -2160,6 +2270,10 @@ select{
      object-fit: cover;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
 .p-4{
   padding: 1rem;
 }
@@ -2180,8 +2294,16 @@ select{
   padding: 2px;
 }
 
+.p-\[30px\]{
+  padding: 30px;
+}
+
 .p-\[50px\]{
   padding: 50px;
+}
+
+.p-\[8px\]{
+  padding: 8px;
 }
 
 .px-1{
@@ -2214,9 +2336,24 @@ select{
   padding-right: 2rem;
 }
 
+.px-\[16px\]{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.px-\[20px\]{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .px-\[24px\]{
   padding-left: 24px;
   padding-right: 24px;
+}
+
+.px-\[32px\]{
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .px-\[6px\]{
@@ -2234,9 +2371,19 @@ select{
   padding-bottom: 0.5rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .py-\[110px\]{
@@ -2244,9 +2391,19 @@ select{
   padding-bottom: 110px;
 }
 
+.py-\[15px\]{
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 .py-\[16px\]{
   padding-top: 16px;
   padding-bottom: 16px;
+}
+
+.py-\[24px\]{
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .py-\[4px\]{
@@ -2264,43 +2421,12 @@ select{
   padding-bottom: 70px;
 }
 
-.px-\[32px\]{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-.py-\[24px\]{
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.py-\[\]{
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.px-\[px10px\]{
-  padding-left: px10px;
-  padding-right: px10px;
-}
-
-.py-\[10px\]{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.px-\[10px\]{
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.px-\[16px\]{
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
 .pb-3{
   padding-bottom: 0.75rem;
+}
+
+.pb-\[6px\]{
+  padding-bottom: 6px;
 }
 
 .pe-2{
@@ -2325,6 +2451,14 @@ select{
 
 .pl-\[50px\]{
   padding-left: 50px;
+}
+
+.pt-\[20px\]{
+  padding-top: 20px;
+}
+
+.pt-\[15px\]{
+  padding-top: 15px;
 }
 
 .text-center{
@@ -2434,6 +2568,10 @@ select{
 
 .leading-\[auto\]{
   line-height: auto;
+}
+
+.leading-none{
+  line-height: 1;
 }
 
 .tracking-\[-0\.16px\]{
