--- a/css/style.scss
+++ b/css/style.scss
@@ -202,6 +202,12 @@ a {
   }
 }
 
+.bg{
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 
 @tailwind base;
 @tailwind components;
